--- a/index.html
+++ b/index.html
@@ -18,22 +18,18 @@
     nav
     </nav>
 
-    <div class="row">
-    <div class="column">
-        <section>
-        section
-        <article>article</article>
-        <p>h1, h2, h3</p>
-        <p>p</p>
-        </section>
-    </div>
-    
-    <div class="column">
+    <section>
+         section
+        <article>
+            <span> article </span>
+            <h1>h1, h2, h3</h1>
+            <p>p</p>
+        </article>
+    </section>
+      
     <aside>
-    aside
+        aside
     </aside>
-    </div>
-    </div>
 
     <footer>
     footer
