--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </nav>
 
     <section>
-         section
+        section
         <article>
-            <span> article </span>
+           article
             <h1>h1, h2, h3</h1>
             <p>p</p>
         </article>
@@ -30,6 +30,7 @@
     <aside>
         aside
     </aside>
+ 
 
     <footer>
     footer
