revised w/ better code

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     nav
     </nav>
 
+    <div class="middle">
     <section>
         section
         <article>
@@ -30,6 +31,7 @@
     <aside>
         aside
     </aside>
+    </div>
  
 
     <footer>
